edit about decription

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#education">education</a></li>
+            <li><a href="#skills">skills</a></li>
             <li><a href="#projects">projects</a></li>
             <li><a href="#contact">contact</a></li>
         </ul>
@@ -46,7 +47,7 @@
 
     <h3>HI THERE !</h3>
     <h1>I'M <span>Hoang Nguyen</span></h1>
-    <p>Tôi là một lập trình viên front end yêu tự do nhưng có sự tự kỷ luật cao và ý thức trách nhiệm trong công việc. Tôi có 2 năm làm việc với ReactJS và 6 tháng với Nodejs. Với thái độ làm việc chuyên nghiệp và khả năng giao tiếp song ngữ tốt của mình, tôi có thể giúp bạn hoàn thành tốt những dự án mà bạn đang có.
+    <p>Tôi là một lập trình viên đã code giỏi lại còn đẹp zai, nhiều tiền và còn nhiều ưu điểm khác. Điểm mạnh của tôi chính là có quá nhiều ưu điểm, nhưng điểm yếu của tôi chỉ có một mà thôi. Đó là: thích bốc phét!
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
